fix body text visibility
nav bar no longer hiding top of main text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ main {
   background-color:lightblue;
   /* make main element take up any surplus space so footer is pushed down */
   flex: 1 0 auto;
+  margin-top: 47px;
 }
 
 /* footer */
